[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["cardene"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.6.22"
openai = "^0.27.8"
llama-index = "^0.6.35"
python-dotenv = "^1.0.0"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
